# cmake-triangle

./: .gitmodules  CMakeLists.txt
res/Shaders/: triangle.frag  triangle.vert
src/: Application.cpp  CMakeLists.txt  Triangle.cpp  Triangle.h  pch.h
src/Core/: Simulation.cpp  Simulation.h  Utils.cpp  Utils.h
src/Renderer/: Buffer.h  GLDebug.cpp  GLDebug.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
